# claude-code-fastapi

./: Dockerfile  README.md  nixpacks.toml  pyproject.toml
app/: document_converter.py  main.py
app/app/: document_converter.py
template/: .mcp.json  build.py  build_dev.py  template.py
