[project]
name = "claude-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "dotenv>=0.9.9",
    "e2b>=1.11.1",
    "httpx>=0.28.1",
    "openapi-python-client>=0.25.3",
]

[dependency-groups]
dev = [
    "e2b-template>=0.2.8",
    "ruff>=0.12.9",
]
