[project]
name = "claude-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "dotenv>=0.9.9",
    "e2b==2.1.2",
    "supabase",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
